--- a/src/pug/menu.pug
+++ b/src/pug/menu.pug
@@ -6,5 +6,17 @@ bodyClassMod: true
 ---
 extends shared/_layout
 
+block header
+  include components/common/_header-inner
+block footer
+  include components/common/_footer-withoutbg
+
 block content
   main.main(class!= pageClassName)
+
+  section#section.section
+    .section__wrapper
+      div
+
+        include components/menu
+
