--- a/src/scss/_generated/_spriteFont.scss
+++ b/src/scss/_generated/_spriteFont.scss
@@ -27,14 +27,17 @@
 @function icon-char($filename) {
 	$char: "";
 
-	@if $filename == discord {
+	@if $filename == chevron-down {
 		$char: "\E001";
 	}
-	@if $filename == medium {
+	@if $filename == discord {
 		$char: "\E002";
 	}
-	@if $filename == twitter {
+	@if $filename == medium {
 		$char: "\E003";
+	}
+	@if $filename == twitter {
+		$char: "\E004";
 	}
 
 	@return $char;
@@ -51,6 +54,10 @@
 	}
 }
 
+.icon-chevron-down {
+	@include icon(chevron-down);
+
+}
 .icon-discord {
 	@include icon(discord);
 
