--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -876,3 +876,147 @@ picture {
     max-width: 100%;
   }
 }
+
+.temporary {
+  width: 100%;
+  max-width: 1280px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media screen and (max-width: 767px) {
+  .temporary {
+    overflow: hidden;
+    padding-top: 15px;
+  }
+}
+.temporary__block {
+  width: 100%;
+  max-width: 420px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.temporary__title {
+  padding-bottom: 16px;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 70px;
+  text-align: center;
+  color: #FFFFFF;
+}
+@media screen and (max-width: 767px) {
+  .temporary__title {
+    font-size: 40px;
+  }
+}
+.temporary__line {
+  width: 100%;
+  max-width: 72px;
+  height: 2px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 12px;
+  border-radius: 5px;
+  background-color: #DF1931;
+}
+.temporary__subtitle {
+  padding-bottom: 32px;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 36px;
+  text-align: center;
+  color: #FFFFFF;
+}
+@media screen and (max-width: 767px) {
+  .temporary__subtitle {
+    font-size: 20px;
+    line-height: normal;
+  }
+}
+.temporary__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+@media screen and (max-width: 767px) {
+  .temporary__form {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+.temporary__form > div:nth-of-type(1) {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  min-width: 1px;
+  max-width: 100%;
+  padding-right: 16px;
+}
+@media screen and (max-width: 767px) {
+  .temporary__form > div:nth-of-type(1) {
+    -webkit-box-flex: 100%;
+        -ms-flex: 100%;
+            flex: 100%;
+    padding-right: 0;
+    padding-bottom: 16px;
+  }
+}
+.temporary__form label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+.temporary__form label input {
+  outline: none;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 40px;
+  padding: 0 16px;
+  border: 1px solid #4C4355;
+  border-radius: 4px;
+  background-color: #1E1A22;
+  font-weight: 400;
+  font-size: 14px;
+  color: #fff;
+}
+.temporary__form label input.placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  color: #F1F1F2;
+}
+.temporary__form label input:-moz-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  color: #F1F1F2;
+}
+.temporary__form label input::-moz-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  color: #F1F1F2;
+}
+.temporary__form label input:-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  color: #F1F1F2;
+}
+.temporary__form label input::-webkit-input-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  color: #F1F1F2;
+}
+.temporary__form .c-btn {
+  height: 40px;
+  font-size: 16px;
+}
+@media screen and (max-width: 767px) {
+  .temporary__form .c-btn {
+    width: 100%;
+  }
+}
