--- a/src/scss/_shared/_common.scss
+++ b/src/scss/_shared/_common.scss
@@ -85,6 +85,8 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    width: 100%;
+    max-width: 190px;
 
     &:hover {
       .c-dropdown {
@@ -122,22 +124,26 @@
       display: block;
       max-width: 24px;
       height: auto;
+
+      & + span {
+        padding-left: 15px;
+      }
     }
 
     span {
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
+      width: 100%;
       max-width: 100%;
-      padding-left: 15px;
       padding-right: 15px;
       font-weight: 400;
       font-size: 16px;
       line-height: 24px;
       color: #FFFFFF;
-      @include adaptive(767) {
-        display: none;
-      }
+        @include adaptive(767) {
+          display: none;
+        }
     }
 
     .icon-font {
