--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -1111,7 +1111,15 @@ picture {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 100%;
+}
+.temporary__form label.is-error input {
+  border-color: #DF1931 !important;
+  color: #df1931;
 }
 .temporary__form label input {
   outline: none;
@@ -1128,6 +1136,9 @@ picture {
   font-weight: 400;
   font-size: 14px;
   color: #fff;
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -o-transition: border-color 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out;
 }
 .temporary__form label input.placeholder {
   font-weight: 400;
@@ -1153,6 +1164,30 @@ picture {
   font-weight: 400;
   font-size: 14px;
   color: #F1F1F2;
+}
+.temporary__form label input:focus {
+  border-color: #fff;
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -o-transition: border-color 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out;
+}
+.temporary__form label input + span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 3px;
+  font-size: 14px;
+  line-height: 20px;
+  color: #DF1931;
+}
+.temporary__form label input + span img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin-right: 10px;
 }
 .temporary__form .c-btn {
   height: 40px;
