--- a/src/scss/_components/homepage/homepage.scss
+++ b/src/scss/_components/homepage/homepage.scss
@@ -11,15 +11,19 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    //height: 100vh;
     min-height: 100vh;
-    max-height: 100vh;
+    //max-height: 100vh;
     padding-top: 88px;
     padding-bottom: 164px;
+    @include adaptive(1023) {
+      padding-top: 100px;
+      padding-bottom: 125px;
+    }
     @include adaptive(767) {
       height: auto;
       max-height: unset;
-      padding-top: 100px;
+      //padding-top: 100px;
       padding-bottom: 100px;
     }
 
