--- a/src/listPages.pug
+++ b/src/listPages.pug
@@ -3,18 +3,22 @@
   const pages = [{
       name: 'Homepage',
       href: 'index.html',
-      progress: '90'
+      progress: '100'
     }, {
       name: 'Menu',
       href: 'menu.html',
-      progress: '90'
+      progress: '100'
     }, {
       name: 'Temporary Page',
       href: 'temporary-page.html',
-      progress: '90'
+      progress: '100'
     }, {
       name: 'Staking',
       href: 'staking.html',
-      progress: '90'
+      progress: '100'
+    }, {
+      name: 'Fundraising',
+      href: 'fundraising.html',
+      progress: '1'
     }
   ];
