--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -33,3 +33,6 @@
 @import "_components/menu";
 @import "_components/temporary";
 @import "_components/staking";
+
+@import "_components/fundraising/welcome";
+@import "_components/fundraising/donation";
