--- a/src/pug/components/common/_footer-withoutbg.pug
+++ b/src/pug/components/common/_footer-withoutbg.pug
@@ -1,6 +1,6 @@
 // FOOTER :: START
 
-footer#footer.footer.footer--wbg
+footer#footer.footer.footer--wbg(class!= (footerModClassName)?'footer--iconWhite':'')
   .c-grid
     .footer__wrapper
 
