--- a/src/pug/shared/_layout.pug
+++ b/src/pug/shared/_layout.pug
@@ -17,6 +17,7 @@ html(lang="en")
     block footer
       include ../components/common/_footer
 
+    block modal
 
   block script
     include _script
