--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -506,6 +506,155 @@ picture {
   }
 }
 
+#fundraisingOverlay {
+  z-index: 999;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  -webkit-backdrop-filter: blur(24px);
+          backdrop-filter: blur(24px);
+}
+
+.c-modal#fundraisingDonation {
+  width: 100%;
+  max-width: 880px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 40px 30px 50px;
+  border: 1px solid #FFFFFF;
+  background-color: #1E1A22;
+}
+.c-modal#fundraisingDonation .mfp-close {
+  opacity: 1;
+  color: #ffffff;
+}
+.c-modal#fundraisingDonation .c-modal__logo {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 25px;
+}
+.c-modal#fundraisingDonation .c-modal__title {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 35px;
+  text-align: center;
+  color: #FFFFFF;
+}
+.c-modal#fundraisingDonation .c-modal__line {
+  width: 40px;
+  height: 2px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 8px;
+  margin-bottom: 16px;
+  border-radius: 5px;
+  background-color: #DF1931;
+}
+.c-modal#fundraisingDonation .c-modal__desc {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 28px;
+  text-align: center;
+  color: #FFFFFF;
+}
+.c-modal#fundraisingDonation .c-modal__desc:nth-of-type(1) {
+  padding-bottom: 30px;
+}
+.c-modal#fundraisingDonation .c-modal__desc:nth-of-type(2) {
+  padding-bottom: 25px;
+}
+.c-modal#fundraisingDonation .c-modal__desc span {
+  color: #df1931;
+}
+.c-modal#fundraisingDonation .c-modal__desc-wrapper {
+  width: 100%;
+  max-width: 545px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.c-modal#fundraisingDonation .temporary__form {
+  width: 100%;
+  max-width: 420px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mfp-zoom-in .mfp-with-anim {
+  opacity: 0;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  -webkit-transform: scale(0.8);
+      -ms-transform: scale(0.8);
+          transform: scale(0.8);
+}
+.mfp-zoom-in.mfp-bg {
+  opacity: 0;
+  -webkit-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+.mfp-zoom-in.mfp-ready .mfp-with-anim {
+  opacity: 1;
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
+}
+.mfp-zoom-in.mfp-ready.mfp-bg {
+  opacity: 0.8;
+}
+.mfp-zoom-in.mfp-removing .mfp-with-anim {
+  -webkit-transform: scale(0.8);
+      -ms-transform: scale(0.8);
+          transform: scale(0.8);
+  opacity: 0;
+}
+.mfp-zoom-in.mfp-removing.mfp-bg {
+  opacity: 0;
+}
+
+.mfp-slide-in .mfp-with-anim {
+  opacity: 0;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  -webkit-transform: translateX(100%);
+      -ms-transform: translateX(100%);
+          transform: translateX(100%);
+}
+.mfp-slide-in.mfp-bg {
+  opacity: 0;
+  -webkit-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+.mfp-slide-in.mfp-ready .mfp-with-anim {
+  opacity: 1;
+  -webkit-transform: translateX(0);
+      -ms-transform: translateX(0);
+          transform: translateX(0);
+}
+.mfp-slide-in.mfp-ready.mfp-bg {
+  opacity: 0.8;
+}
+.mfp-slide-in.mfp-removing .mfp-with-anim {
+  -webkit-transform: translateX(100%);
+      -ms-transform: translateX(100%);
+          transform: translateX(100%);
+  opacity: 0;
+}
+.mfp-slide-in.mfp-removing.mfp-bg {
+  opacity: 0;
+}
+
 .icon-font {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2027,6 +2176,17 @@ picture {
   border-radius: 4px;
   border: 1px dashed #4C4355;
 }
+@media screen and (max-width: 767px) {
+  .donation__form-result {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
 .donation__form-result > span {
   width: 1px;
   min-height: 40px;
@@ -2035,12 +2195,35 @@ picture {
   border-radius: 5px;
   background-color: #4C4355;
 }
+@media screen and (max-width: 767px) {
+  .donation__form-result > span {
+    min-width: 40px;
+    min-height: 1px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+}
 .donation__form-result > div {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
   min-width: 1px;
   max-width: 100%;
+}
+@media screen and (max-width: 767px) {
+  .donation__form-result > div {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
 }
 .donation__form-result > div p {
   padding-bottom: 8px;
@@ -2125,6 +2308,8 @@ picture {
   max-width: 100%;
 }
 .donation__btn {
+  width: 100%;
+  max-width: 235px;
   padding-top: 30px;
 }
 .donation__btn .c-btn {
@@ -2132,6 +2317,267 @@ picture {
   height: 40px;
   font-size: 16px;
 }
+.donation__btn .c-btn:nth-of-type(2) {
+  display: none;
+}
 .donation .staking__toggle {
   margin-bottom: 15px;
+}
+
+.total {
+  overflow: hidden;
+  position: relative;
+  padding-top: 135px;
+  padding-bottom: 135px;
+}
+@media screen and (max-width: 767px) {
+  .total {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+}
+.total__bg {
+  z-index: 0;
+  position: absolute;
+  top: -50px;
+  left: 0;
+  width: 100%;
+  height: calc(100% + 100px);
+  background-image: url("../img/img-total-bg.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+@media screen and (max-width: 767px) {
+  .total__bg {
+    opacity: 0.75;
+  }
+}
+.total__wrapper {
+  z-index: 2;
+  position: relative;
+}
+.total__title {
+  padding-bottom: 10px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 35px;
+  text-align: center;
+  color: #FFFFFF;
+}
+.total__line {
+  width: 40px;
+  height: 2px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  background-color: #1E1A22;
+}
+@media screen and (max-width: 767px) {
+  .total__line {
+    background-color: #ffffff;
+  }
+}
+.total__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  max-width: 375px;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media screen and (max-width: 767px) {
+  .total__block {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+.total__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+@media screen and (max-width: 767px) {
+  .total__list {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+}
+.total__list li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.total__list li:not(:last-of-type) {
+  padding-bottom: 20px;
+}
+.total__list li.red p:after {
+  background-color: #e33147;
+}
+.total__list li.blue p:after {
+  background-color: #51befc;
+}
+.total__list li.green p:after {
+  background-color: #35ff86;
+}
+.total__list li.orange p:after {
+  background-color: #e59419;
+}
+.total__list p {
+  position: relative;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  color: #FFFFFF;
+}
+.total__list p:after {
+  content: "";
+  position: absolute;
+  top: calc(100% + 3px);
+  left: 0;
+  width: 16px;
+  height: 2px;
+  border-radius: 5px;
+}
+
+.overview {
+  padding-top: 35px;
+  padding-bottom: 35px;
+}
+@media screen and (max-width: 767px) {
+  .overview {
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+}
+.overview .c-grid {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.overview__wrapper {
+  width: 100%;
+  max-width: 880px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.overview__title {
+  padding-bottom: 10px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 35px;
+  text-align: center;
+  color: #FFFFFF;
+}
+.overview__line {
+  width: 40px;
+  height: 2px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  background-color: #DF1931;
+}
+.overview__desc {
+  width: 100%;
+  max-width: 825px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 50px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 28px;
+  text-align: center;
+  color: #FFFFFF;
+}
+.overview__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 30px;
+  border: 1px solid #FFFFFF;
+  background-color: transparent;
+}
+.overview__block-wrapper {
+  position: relative;
+  left: -30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: calc(100% + 30px);
+}
+.overview__block-wrapper > div {
+  width: 100%;
+  max-width: 33.3333333333%;
+  padding-left: 30px;
+  padding-bottom: 30px;
+}
+@media screen and (max-width: 767px) {
+  .overview__block-wrapper > div {
+    max-width: 100%;
+  }
+}
+.overview__block-head {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 48px;
+  height: 48px;
+  margin-bottom: 50px;
+  border-radius: 50%;
+  background-color: #4C4355;
+}
+.overview__block-head img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.overview__block-title {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 24px;
+  color: #F1F1F2;
+}
+.overview__block-line {
+  width: 20px;
+  height: 2px;
+  margin-top: 12px;
+  margin-bottom: 8px;
+  border-radius: 5px;
+  background-color: #DF1931;
+}
+.overview__block-desc {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  color: #F1F1F2;
 }
