--- a/src/pug/shared/_script.pug
+++ b/src/pug/shared/_script.pug
@@ -1,5 +1,8 @@
 // SCRIPT :: START
 
+script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer")
+script(src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js" integrity="sha512-IsNh5E3eYy3tr/JiX2Yx4vsCujtkhwl7SLqgnwLNgf04Hrt9BT9SXlLlZlWx+OK4ndzAoALhsMNcCmkggjZB1w==" crossorigin="anonymous" referrerpolicy="no-referrer")
+
 //script(src="js/vendor.js")
 script(src="js/app.js")
 
