--- a/src/scss/_components/fundraising/donation.scss
+++ b/src/scss/_components/fundraising/donation.scss
@@ -88,6 +88,10 @@
       padding: 15px;
       border-radius: 4px;
       border: 1px dashed #4C4355;
+      @include adaptive(767) {
+        flex-direction: column;
+        align-items: center;
+      }
 
       > span {
         width: 1px;
@@ -96,12 +100,24 @@
         margin-right: 15px;
         border-radius: 5px;
         background-color: #4C4355;
+        @include adaptive(767) {
+          min-width: 40px;
+          min-height: 1px;
+          margin-top: 15px;
+          margin-bottom: 15px;
+        }
       }
 
       > div {
         flex: 1;
         min-width: 1px;
         max-width: 100%;
+        @include adaptive(767) {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          text-align: center;
+        }
 
         p {
           padding-bottom: 8px;
@@ -167,12 +183,18 @@
   }
 
   &__btn {
+    width: 100%;
+    max-width: 235px;
     padding-top: 30px;
 
     .c-btn {
       width: 100%;
       height: 40px;
       font-size: 16px;
+
+      &:nth-of-type(2) {
+        display: none;
+      }
     }
   }
 
