--- a/src/scss/_shared/_common.scss
+++ b/src/scss/_shared/_common.scss
@@ -167,4 +167,96 @@
   }
 }
 
+#fundraisingOverlay {
+  z-index: 999;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(24px);
+}
+
+.c-modal#fundraisingDonation {
+  width: 100%;
+  max-width: 880px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 40px 30px 50px;
+  border: 1px solid #FFFFFF;
+  background-color: #1E1A22;
+
+  .mfp-close {
+    opacity: 1;
+    color: #ffffff;
+  }
+
+  .c-modal {
+    &__logo {
+      display: block;
+      max-width: 100%;
+      height: auto;
+      margin-left: auto;
+      margin-right: auto;
+      margin-bottom: 25px;
+    }
+
+    &__title {
+      font-weight: 500;
+      font-size: 24px;
+      line-height: 35px;
+      text-align: center;
+      color: #FFFFFF;
+    }
+
+    &__line {
+      width: 40px;
+      height: 2px;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 8px;
+      margin-bottom: 16px;
+      border-radius: 5px;
+      background-color: #DF1931;
+    }
+
+    &__desc {
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 28px;
+      text-align: center;
+      color: #FFFFFF;
+
+      &:nth-of-type(1) {
+        padding-bottom: 30px;
+      }
+
+      &:nth-of-type(2) {
+        padding-bottom: 25px;
+      }
+
+      span {
+        color: #df1931;
+      }
+
+      &-wrapper {
+        width: 100%;
+        max-width: 545px;
+        margin-left: auto;
+        margin-right: auto;
+      }
+    }
+  }
+
+  .temporary__form {
+    width: 100%;
+    max-width: 420px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 // COMMON :: END
