--- a/src/pug/fundraising.pug
+++ b/src/pug/fundraising.pug
@@ -14,7 +14,7 @@ block footer
 block modal
   mixin modalContent()
     .modal__body
-      img.c-modal__logo(src="img/icon-welcome.svg" alt="")
+      img.c-modal__logo(src="img/logo-modal.svg" alt="")
       p.c-modal__title Congratulations!
       .c-modal__line
       .c-modal__desc-wrapper
