--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -38,3 +38,5 @@
 @import "_components/fundraising/donation";
 @import "_components/fundraising/total";
 @import "_components/fundraising/overview";
+
+@import "_components/bridge/bridge";
