--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -133,7 +133,7 @@
   src: url("../fonts/iconFont.eot");
   src: url("../fonts/iconFont.eot?#iefix") format("eot"), url("../fonts/iconFont.woff2") format("woff2"), url("../fonts/iconFont.woff") format("woff"), url("../fonts/iconFont.ttf") format("truetype"), url("../fonts/iconFont.svg#iconFont") format("svg");
 }
-.icon-twitter:before, .icon-search:before, .icon-medium:before, .icon-dots:before, .icon-discord:before, .icon-chevron-down:before {
+.icon-twitter:before, .icon-swap:before, .icon-search:before, .icon-medium:before, .icon-filter:before, .icon-dots:before, .icon-discord:before, .icon-chevron-down:before {
   font-family: "iconFont", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -156,16 +156,24 @@
   content: "\e003";
 }
 
-.icon-medium:before {
+.icon-filter:before {
   content: "\e004";
 }
 
-.icon-search:before {
+.icon-medium:before {
   content: "\e005";
 }
 
-.icon-twitter:before {
+.icon-search:before {
   content: "\e006";
+}
+
+.icon-swap:before {
+  content: "\e007";
+}
+
+.icon-twitter:before {
+  content: "\e008";
 }
 
 html,
@@ -515,9 +523,14 @@ picture {
   display: none;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.01);
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
+  background: rgba(0, 0, 0, 0.2);
+  -webkit-backdrop-filter: blur(24px);
+          backdrop-filter: blur(24px);
+}
+
+.mfp-bg {
+  opacity: 0;
+  background-color: transparent;
 }
 
 .c-modal#fundraisingDonation {
@@ -1385,6 +1398,9 @@ picture {
           align-items: center;
   padding: 96px 15px 30px;
   min-height: 100vh;
+}
+.staking.staking--bridge .staking__body {
+  background-color: transparent;
 }
 .staking__header {
   z-index: 999;
@@ -2579,5 +2595,616 @@ picture {
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
+  color: #F1F1F2;
+}
+
+.bridge {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  max-width: 715px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 32px;
+  border-radius: 4px;
+  background-color: #2A252F;
+}
+.bridge__head {
+  position: relative;
+  padding-left: 48px;
+  padding-right: 48px;
+}
+@media screen and (max-width: 767px) {
+  .bridge__head {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+.bridge__body {
+  padding: 32px 48px;
+}
+@media screen and (max-width: 767px) {
+  .bridge__body {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+.bridge__footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 16px 48px;
+  background-color: #4c4355;
+}
+@media screen and (max-width: 767px) {
+  .bridge__footer {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+.bridge__footer > div {
+  width: 50%;
+}
+.bridge__footer > div:nth-of-type(2) p {
+  text-align: right;
+}
+.bridge__footer p {
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 1.2;
+  color: #FFFFFF;
+}
+@media screen and (max-width: 767px) {
+  .bridge__footer p {
+    font-size: 10px;
+  }
+}
+.bridge__footer p:not(:last-of-type) {
+  padding-bottom: 12px;
+}
+.bridge__title {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 24px;
+  text-align: center;
+  color: #F1F1F2;
+}
+@media screen and (max-width: 767px) {
+  .bridge__title {
+    font-size: 20px;
+  }
+}
+.bridge__filter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 32px;
+  height: 32px;
+  border-radius: 4px;
+  background-color: #4C4355;
+}
+.bridge__filter .icon-font {
+  color: #ffffff;
+  font-size: 15px;
+}
+.bridge__filter-wrapper {
+  z-index: 99;
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+@media screen and (max-width: 767px) {
+  .bridge__filter-wrapper {
+    right: 18px;
+  }
+}
+.bridge__filter-dropdown {
+  z-index: 100;
+  position: absolute;
+  top: calc(100% + 16px);
+  right: -16px;
+  display: none;
+  width: 100%;
+  min-width: 285px;
+  max-width: 285px;
+  padding: 32px 24px;
+  border-radius: 12px;
+  -webkit-box-shadow: 6px 7px 16px rgba(0, 0, 0, 0.16);
+          box-shadow: 6px 7px 16px rgba(0, 0, 0, 0.16);
+  background-color: #1E1A22;
+}
+.bridge__filter-dropdown > div:nth-of-type(1) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-bottom: 24px;
+}
+.bridge__filter-dropdown > div:nth-of-type(1) p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1;
+  color: #F1F1F2;
+}
+.bridge__filter-dropdown > div:nth-of-type(1) label {
+  cursor: pointer;
+  z-index: 2;
+  position: relative;
+  width: 36px;
+  height: 20px;
+}
+.bridge__filter-dropdown > div:nth-of-type(1) label input {
+  opacity: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.bridge__filter-dropdown > div:nth-of-type(1) label input:checked + span {
+  background-color: #17d92b;
+  -webkit-transition: background-color 0.3s ease-in-out;
+  -o-transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+}
+.bridge__filter-dropdown > div:nth-of-type(1) label input:checked + span:after {
+  left: 17px;
+  background-color: #fff;
+  -webkit-transition: left 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  -o-transition: left 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  transition: left 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+.bridge__filter-dropdown > div:nth-of-type(1) label span {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 36px;
+  height: 20px;
+  border-radius: 44px;
+  border: 1px solid #17D92B;
+  background-color: transparent;
+  -webkit-transition: background-color 0.3s ease-in-out;
+  -o-transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+}
+.bridge__filter-dropdown > div:nth-of-type(1) label span:after {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background-color: #17d92b;
+  -webkit-transition: left 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  -o-transition: left 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  transition: left 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+.bridge__filter-dropdown input {
+  outline: none;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 40px;
+  padding: 0 15px;
+  border: 1px solid #4C4355;
+  border-radius: 4px;
+  background-color: #1E1A22;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #fff;
+}
+.bridge__filter-dropdown input.placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.bridge__filter-dropdown input:-moz-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.bridge__filter-dropdown input::-moz-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.bridge__filter-dropdown input:-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.bridge__filter-dropdown input::-webkit-input-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.bridge__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.bridge__form .c-btn {
+  width: 100%;
+  height: 40px;
+  font-size: 16px;
+}
+.bridge__form .c-btn[bridge-insufficient-js] {
+  display: none;
+}
+.bridge__form .c-btn:nth-of-type(2) {
+  border-color: #4C4355;
+  background-color: #4C4355;
+}
+.bridge__form .c-btn__wrapper {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  max-width: 216px;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media screen and (max-width: 767px) {
+  .bridge__form .c-btn__wrapper {
+    max-width: 100%;
+  }
+}
+.bridge__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-bottom: 24px;
+}
+@media screen and (max-width: 767px) {
+  .bridge__block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+.bridge__block > div:nth-of-type(1), .bridge__block > div:nth-of-type(3) {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  min-width: 1px;
+  max-width: 100%;
+  padding: 16px 20px;
+  border-radius: 4px;
+  border: 1px dashed #4C4355;
+}
+.bridge__block > div:nth-of-type(1) .c-dropdown__wrapper, .bridge__block > div:nth-of-type(3) .c-dropdown__wrapper {
+  max-width: 100%;
+  margin-bottom: 12px;
+  border-radius: 4px;
+  background-color: #1E1A22;
+}
+@media screen and (max-width: 767px) {
+  .bridge__block > div:nth-of-type(1) .c-dropdown__toggle span, .bridge__block > div:nth-of-type(3) .c-dropdown__toggle span {
+    display: block;
+  }
+}
+.bridge__block > div:nth-of-type(2) {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 24px;
+}
+@media screen and (max-width: 767px) {
+  .bridge__block > div:nth-of-type(2) {
+    width: 100%;
+  }
+}
+.bridge__block > div:nth-of-type(2) > span {
+  position: absolute;
+  left: -1px;
+  width: calc(100% + 2px);
+  height: 24px;
+  background-color: #2A252F;
+}
+@media screen and (max-width: 767px) {
+  .bridge__block > div:nth-of-type(2) > span {
+    display: none;
+  }
+}
+.bridge__block > div:nth-of-type(2) > span:nth-of-type(1) {
+  -webkit-transform: translateY(-28px);
+      -ms-transform: translateY(-28px);
+          transform: translateY(-28px);
+}
+.bridge__block > div:nth-of-type(2) > span:nth-of-type(1):after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 12px;
+  width: 100%;
+  height: 24px;
+  border-radius: 0 0 4px 4px;
+  border-left: 1px dashed #4C4355;
+  border-right: 1px dashed #4C4355;
+  border-bottom: 1px dashed #4C4355;
+}
+.bridge__block > div:nth-of-type(2) > span:nth-of-type(2) {
+  -webkit-transform: translateY(28px);
+      -ms-transform: translateY(28px);
+          transform: translateY(28px);
+}
+.bridge__block > div:nth-of-type(2) > span:nth-of-type(2):after {
+  content: "";
+  position: absolute;
+  top: 12px;
+  left: 0;
+  width: 100%;
+  height: 24px;
+  border-radius: 4px 4px 0 0;
+  border-top: 1px dashed #4C4355;
+  border-left: 1px dashed #4C4355;
+  border-right: 1px dashed #4C4355;
+}
+.bridge__block > div:nth-of-type(3) h4 {
+  opacity: 0;
+  visibility: hidden;
+}
+.bridge__block h2 {
+  padding-bottom: 12px;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 16px;
+  color: #FFFFFF;
+}
+.bridge__block h4 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.bridge__block h4 span {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  color: #807E82;
+}
+.bridge__block-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  min-height: 56px;
+  padding: 8px 16px;
+  margin-bottom: 12px;
+  border: 1px solid #4C4355;
+  border-radius: 4px;
+  background-color: #1E1A22;
+}
+.bridge__block-box > div:nth-of-type(1) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-bottom: 2px;
+}
+.bridge__block-box > div:nth-of-type(1) .c-dropdown {
+  left: auto;
+  right: 0;
+  min-width: 220px;
+}
+.bridge__block-box > div:nth-of-type(1) .c-dropdown__wrapper {
+  width: auto;
+  max-width: unset;
+  margin-bottom: 0;
+}
+.bridge__block-box > div:nth-of-type(1) .c-dropdown__toggle {
+  height: 20px;
+  padding-left: 0;
+  padding-right: 0;
+  border: none;
+}
+.bridge__block-box > div:nth-of-type(1) .c-dropdown__toggle > img {
+  max-width: 16px;
+}
+.bridge__block-box > div:nth-of-type(1) .c-dropdown__toggle > span {
+  padding-left: 8px;
+  padding-right: 4px;
+}
+.bridge__block-box > div:nth-of-type(2) {
+  padding-top: 2px;
+}
+.bridge__block-box > div:nth-of-type(2) > span {
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 16px;
+  color: #807E82;
+}
+.bridge__block-box input {
+  outline: none;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0;
+  margin: 0;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  min-width: 1px;
+  height: 20px;
+  border: none;
+  border-radius: 0;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  background-color: transparent;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  color: #fff;
+}
+.bridge__block-box input.placeholder {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.bridge__block-box input:-moz-placeholder {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.bridge__block-box input::-moz-placeholder {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.bridge__block-box input:-ms-input-placeholder {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.bridge__block-box input::-webkit-input-placeholder {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.bridge__block-reverse {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  min-width: 32px;
+  height: 32px;
+  border-radius: 4px;
+  background-color: #FFFFFF;
+}
+.bridge__block-reverse i.icon-font {
+  color: #1E1A22;
+  font-size: 15px;
+}
+.bridge__address {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.bridge__address label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  padding-bottom: 32px;
+}
+.bridge__address label p {
+  padding-bottom: 8px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.bridge__address label input {
+  outline: none;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 40px;
+  padding: 0 15px;
+  border: 1px solid #4C4355;
+  border-radius: 4px;
+  background-color: #1E1A22;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #fff;
+}
+.bridge__address label input.placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.bridge__address label input:-moz-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.bridge__address label input::-moz-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.bridge__address label input:-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.bridge__address label input::-webkit-input-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
   color: #F1F1F2;
 }
