--- a/src/listPages.pug
+++ b/src/listPages.pug
@@ -19,6 +19,10 @@
     }, {
       name: 'Fundraising',
       href: 'fundraising.html',
+      progress: '100'
+    }, {
+      name: 'Bridge',
+      href: 'bridge.html',
       progress: '1'
     }
   ];
