Playground pages :::  - created;

--- a/src/listPages.pug
+++ b/src/listPages.pug
@@ -23,6 +23,34 @@
     }, {
       name: 'Bridge',
       href: 'bridge.html',
-      progress: '1'
+      progress: '100'
+    }, {
+      name: 'Playground - step 1',
+      href: 'playground-step-1.html',
+      progress: '100'
+    }, {
+      name: 'Playground - step 2',
+      href: 'playground-step-2.html',
+      progress: '100'
+    }, {
+      name: 'Playground - step 3',
+      href: 'playground-step-3.html',
+      progress: '100'
+    }, {
+      name: 'Playground - step 4',
+      href: 'playground-step-4.html',
+      progress: '100'
+    }, {
+      name: 'Playground - step 5',
+      href: 'playground-step-5.html',
+      progress: '100'
+    }, {
+      name: 'Playground - step 6',
+      href: 'playground-step-6.html',
+      progress: '100'
+    }, {
+      name: 'Playground - step 7',
+      href: 'playground-step-7.html',
+      progress: '100'
     }
   ];
