--- a/src/scss/_generated/_spriteFont.scss
+++ b/src/scss/_generated/_spriteFont.scss
@@ -42,14 +42,17 @@
 	@if $filename == medium {
 		$char: "\E005";
 	}
-	@if $filename == search {
+	@if $filename == notification {
 		$char: "\E006";
 	}
-	@if $filename == swap {
+	@if $filename == search {
 		$char: "\E007";
 	}
-	@if $filename == twitter {
+	@if $filename == swap {
 		$char: "\E008";
+	}
+	@if $filename == twitter {
+		$char: "\E009";
 	}
 
 	@return $char;
@@ -84,6 +87,10 @@
 }
 .icon-medium {
 	@include icon(medium);
+
+}
+.icon-notification {
+	@include icon(notification);
 
 }
 .icon-search {
