--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -40,3 +40,5 @@
 @import "_components/fundraising/overview";
 
 @import "_components/bridge/bridge";
+
+@import "_components/playground/playground";
