--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -133,7 +133,7 @@
   src: url("../fonts/iconFont.eot");
   src: url("../fonts/iconFont.eot?#iefix") format("eot"), url("../fonts/iconFont.woff2") format("woff2"), url("../fonts/iconFont.woff") format("woff"), url("../fonts/iconFont.ttf") format("truetype"), url("../fonts/iconFont.svg#iconFont") format("svg");
 }
-.icon-twitter:before, .icon-swap:before, .icon-search:before, .icon-medium:before, .icon-filter:before, .icon-dots:before, .icon-discord:before, .icon-chevron-down:before {
+.icon-twitter:before, .icon-swap:before, .icon-search:before, .icon-notification:before, .icon-medium:before, .icon-filter:before, .icon-dots:before, .icon-discord:before, .icon-chevron-down:before {
   font-family: "iconFont", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -164,16 +164,20 @@
   content: "\e005";
 }
 
-.icon-search:before {
+.icon-notification:before {
   content: "\e006";
 }
 
-.icon-swap:before {
+.icon-search:before {
   content: "\e007";
 }
 
-.icon-twitter:before {
+.icon-swap:before {
   content: "\e008";
+}
+
+.icon-twitter:before {
+  content: "\e009";
 }
 
 html,
@@ -692,6 +696,16 @@ picture {
   .logo.logo--header .logo__btn img:nth-of-type(2) {
     display: block;
   }
+}
+.logo.logo--playground {
+  width: 100%;
+  max-width: 312px;
+}
+.logo.logo--playground .logo__btn {
+  width: 100%;
+}
+.logo.logo--playground .logo__btn img {
+  width: 100%;
 }
 .logo__btn {
   display: -webkit-box;
@@ -1393,9 +1407,6 @@ picture {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   padding: 96px 15px 30px;
   min-height: 100vh;
 }
@@ -1692,6 +1703,9 @@ picture {
           flex-direction: column;
   width: 100%;
   max-width: 1230px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   margin-left: auto;
   margin-right: auto;
   border-radius: 4px;
@@ -1759,6 +1773,10 @@ picture {
   .staking__body-head .c-dropdown__toggle span {
     display: block;
   }
+}
+.staking__body-head .c-btn {
+  height: 32px;
+  font-size: 14px;
 }
 .staking__toggle {
   position: relative;
@@ -1933,6 +1951,28 @@ picture {
   font-size: 14px;
   color: #FFFFFF;
 }
+.staking__table tbody tr td > p.is-open {
+  color: #19df5c;
+}
+.staking__table tbody tr td > u {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
+.staking__table tbody tr td > u img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin-right: 8px;
+}
+.staking__table tbody tr td > u span {
+  font-size: 14px;
+  color: #FFFFFF;
+}
 .staking__table .token {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2012,6 +2052,46 @@ picture {
 .staking__table .more .icon-font {
   font-size: 10px;
   color: #ffffff;
+}
+.staking__notify {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-right: 23px;
+}
+.staking__notify i.icon-font {
+  color: #ffffff;
+  font-size: 15px;
+}
+.staking__notify span {
+  z-index: 2;
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 12px;
+  height: 12px;
+  padding-bottom: 1px;
+  border-radius: 50%;
+  background-color: #df1931;
+  color: #ffffff;
+  font-weight: 500;
+  font-size: 7px;
 }
 
 .welcome {
@@ -3207,4 +3287,491 @@ picture {
   font-size: 14px;
   line-height: 20px;
   color: #F1F1F2;
+}
+
+.playground__section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100vh;
+}
+@media screen and (max-width: 767px) {
+  .playground__section {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+.playground__section-left, .playground__section-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 50%;
+}
+@media screen and (max-width: 767px) {
+  .playground__section-left, .playground__section-right {
+    width: 100%;
+    padding: 50px 15px;
+  }
+}
+.playground__section-left {
+  background-color: #2a252f;
+}
+@media screen and (max-width: 767px) {
+  .playground__section-left {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+}
+.playground__section-left > div {
+  width: 100%;
+  max-width: 286px;
+}
+.playground__section-left .playground__box-list {
+  padding-bottom: 0;
+}
+.playground__section-right {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+@media screen and (max-width: 767px) {
+  .playground__section-right {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    padding-bottom: 50px;
+  }
+}
+.playground__section-right > div {
+  width: 100%;
+  max-width: 345px;
+}
+.playground__section-right .c-btn {
+  width: 100%;
+  max-width: 320px;
+}
+.playground__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-height: 100%;
+  border: 1px solid #FFFFFF;
+  background-color: #2a252f;
+}
+.playground__box.is-ended {
+  pointer-events: none;
+}
+.playground__box.is-ended .playground__box-num p {
+  color: #ffffff;
+}
+.playground__box-head, .playground__box-body {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  min-height: 1px;
+  max-height: 100%;
+  padding: 16px;
+}
+.playground__box-head {
+  position: relative;
+}
+.playground__box-body {
+  background-color: #1e1a22;
+}
+.playground__box-body .c-btn {
+  width: 100%;
+  height: 32px;
+  font-size: 14px;
+  color: #ffffff;
+}
+.playground__box-body .c-btn__wrapper {
+  padding-bottom: 10px;
+}
+.playground__box-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-bottom: 10px;
+}
+.playground__box-header span {
+  overflow: hidden;
+  white-space: nowrap;
+  -o-text-overflow: ellipsis;
+     text-overflow: ellipsis;
+  display: block;
+  max-width: 70px;
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 16px;
+  color: #FFFFFF;
+}
+.playground__box-num {
+  position: relative;
+}
+.playground__box-num img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+.playground__box-num p {
+  z-index: 5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100%;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1;
+  color: #1E1A22;
+}
+.playground__box-badge {
+  overflow: hidden;
+  white-space: nowrap;
+  -o-text-overflow: ellipsis;
+     text-overflow: ellipsis;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: auto;
+  max-width: 100px;
+  height: 20px;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-bottom: 2px;
+  border-radius: 10px;
+  background-color: #DF1931;
+  font-weight: 500;
+  font-size: 12px;
+  color: #FFFFFF;
+}
+.playground__box-badge.is-out {
+  background-color: #4c4355;
+}
+.playground__box-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-bottom: 12px;
+}
+.playground__box-list li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-bottom: 8px;
+}
+.playground__box-list li div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.playground__box-list li div img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin-right: 8px;
+}
+.playground__box-list p {
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.playground__box-info {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  text-align: center;
+  color: #FFFFFF;
+}
+.playground__box-info.hidden {
+  opacity: 0;
+}
+.playground__box-wrapper {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  left: -16px;
+  width: calc(100% + 16px);
+  padding: 0 20px 20px;
+}
+.playground__box-wrapper > div {
+  width: 100%;
+  max-width: 25%;
+  padding-left: 16px;
+  padding-bottom: 16px;
+}
+@media screen and (max-width: 1279px) {
+  .playground__box-wrapper > div {
+    max-width: 33.3333333333%;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .playground__box-wrapper > div {
+    max-width: 50%;
+  }
+}
+@media screen and (max-width: 767px) {
+  .playground__box-wrapper > div {
+    max-width: 100%;
+  }
+}
+.playground__title {
+  padding-bottom: 32px;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 40px;
+  text-align: center;
+  color: #F1F1F2;
+}
+@media screen and (max-width: 1279px) {
+  .playground__title {
+    font-size: 28px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .playground__title {
+    font-size: 24px;
+  }
+}
+.playground__back {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 12px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 40px;
+  text-align: center;
+  color: #FFFFFF;
+}
+@media screen and (max-width: 767px) {
+  .playground__back {
+    font-size: 14px;
+  }
+}
+.playground__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  max-width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 19px;
+}
+.playground__form.playground__form--last .playground__form-field {
+  margin-bottom: 20px;
+}
+.playground__form-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.playground__form-group > div {
+  width: 100%;
+  max-width: calc((100% - 16px) / 2);
+}
+@media screen and (max-width: 767px) {
+  .playground__form-group > div {
+    max-width: 100%;
+  }
+}
+.playground__form-field {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 13px;
+}
+.playground__form-field label {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+.playground__form-field label.is-full input {
+  padding-right: 22px;
+}
+.playground__form-field label input {
+  outline: none;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 40px;
+  padding: 0 100px 0 44px;
+  border-radius: 4px;
+  border: 1px solid #4C4355;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  background-color: transparent;
+  font-weight: 400;
+  font-size: 14px;
+  color: #F1F1F2;
+}
+.playground__form-field label img {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  display: block;
+  max-width: 16px;
+  height: auto;
+}
+.playground__form-field label span {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 100px;
+  padding-right: 8px;
+  padding-bottom: 8px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  text-align: right;
+  color: #807E82;
+}
+.playground__form-field .c-dropdown__wrapper {
+  max-width: 100%;
+}
+.playground__form-label {
+  padding-bottom: 8px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.playground__form-info {
+  font-weight: 400;
+  font-size: 12px;
+  color: #807E82;
+}
+.playground .staking__header {
+  background-color: transparent;
+}
+@media screen and (max-width: 767px) {
+  .playground .staking__header {
+    background-color: #1e1a22;
+  }
+}
+@media screen and (max-width: 767px) {
+  .playground .staking__header-wrapper > div:nth-of-type(1) {
+    display: none;
+  }
+}
+@media screen and (max-width: 1279px) {
+  .playground .staking__header-mobile {
+    opacity: 1;
+    visibility: visible;
+    overflow: unset;
+    -webkit-transform: unset;
+        -ms-transform: unset;
+            transform: unset;
+    position: static;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    width: auto;
+    max-width: unset;
+    height: auto;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    border: none;
+    padding: 0;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    background-color: transparent;
+  }
+  .playground .staking__header-mobile > div:nth-of-type(2) {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    width: auto;
+  }
+  .playground .staking__header-mobile > div:nth-of-type(2) .c-dropdown__wrapper {
+    max-width: 190px;
+    margin-top: 0;
+    margin-left: 16px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .playground .staking__header-mobile > div:nth-of-type(2) .c-dropdown__wrapper {
+    max-width: 150px;
+  }
 }
